# gdep

./: .gitignore  README.md  README_JA.md  README_KR.md  README_UI.md  README_ZH.md  README_ZH_TW.md  install.bat
gdep-cli/: README.md  pyproject.toml  requirements.txt
gdep-cli/gdep/: __init__.py  agent.py  axmol_event_refs.py  cli.py  cpp_flow.py  cpp_runner.py  detector.py  init_context.py  llm_provider.py  method_extractor.py  runner.py  ue5_blueprint_mapping.py  ue5_flow.py  ue5_gas_analyzer.py  ue5_runner.py  unity_animator.py  unused_assets.py
gdep-cli/gdep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gdep-cli/gdep/analyzer/: linter.py  pattern_detector.py
gdep-cli/gdep/wiki/: __init__.py  cache_layer.py  edge_extractor.py  index.py  models.py  node_writer.py  staleness.py  store.py
gdep-cli/gdep_mcp/: README.md  README_JA.md  README_KR.md  README_ZH.md  README_ZH_TW.md  server.py
gdep-cli/gdep_mcp/tools/: __init__.py  analyze_impact_and_risk.py  detect_patterns.py  explain_method_logic.py  explore_class_semantics.py  find_class_hierarchy.py  find_method_callers.py  find_unused_assets.py  query_project_api.py  read_class_source.py  summarize_project_diff.py  trace_gameplay_flow.py  wiki_get.py  wiki_list.py  wiki_save_conversation.py  wiki_search.py
gdep-cli/web/: README.md  README_KR.md
gdep-cli/web/backend/: main.py
gdep-cli/web/backend/routers/: analysis.py  project.py
gdep-cli/web/frontend/: README.md
gdep-cli/web/frontend/src/: App.tsx  i18n.ts
gdep-cli/web/frontend/src/api/: client.ts
(+11 files in other folders)
